--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "instantsearch.js": "^4.32.0"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.3.4",
         "autoprefixer": "^10.3.7",
         "eslint": "^8.1.0",
         "eslint-config-prettier": "^8.3.0",
