--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://games.mlo.io/'
+baseURL = 'https://games.mlo.io/'
 languageCode = 'en-us'
 title = 'Board Games'
 disableKinds = ["taxonomy", "term", "RSS", "sitemap"]
